# goviet-ime

./: .gitignore  AI_CONTEXT.md  README.md
backend/: README.md  go.mod
backend/cmd/daemon/: main.go
backend/internal/engine/: benchmark_test.go  composition.go  composition_test.go  config.go  realworld_test.go  telex.go  telex_comprehensive_test.go  telex_test.go  types.go  unicode.go  unicode_test.go  validation.go  vietnamese_test.go  vni.go
frontend/: CMakeLists.txt  README.md  goviet-im.conf  goviet.conf.in
frontend/src/: engine.cpp  engine.h  main.cpp
